# genogrove

./: .clang-format  .cmake-format.yaml  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SANITIZERS.md
.github/workflows/: ci-macos.yml  ci-ubuntu.yml  ci.yml  continuous-benchmarking.yml  release-changelog.yml  update-changelog.yml
benchmarks/: CMakeLists.txt  benchmark_utils.hpp  cli_benchmark.cpp  grove_creation.cpp  grove_lazy_read.cpp  grove_serialization.cpp  grove_view_read.cpp  index.html  visualize.py
benchmarks/data/: 10000_intervals_sorted.txt  10000_intervals_unsorted.txt  1000_intervals_sorted.txt  1000_intervals_unsorted.txt  100_intervals_sorted.txt  100_intervals_unsorted.txt  5000_intervals_sorted.txt  5000_intervals_unsorted.txt  500_intervals_sorted.txt  500_intervals_unsorted.txt  Makefile  generate_intervals  generate_intervals.cpp
benchmarks/data/cli/query/basic/query/3p-partial/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/5p-partial/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/contained/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/enclosed/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/left-adjacent-gap/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/mid-gap1/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/mid-gap2/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/perfect/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/perfect-gap/: 10K_sorted.bed
benchmarks/data/cli/query/basic/query/right-adjacent-gap/: 10K_sorted.bed
cli/: CMakeLists.txt
cli/include/: bed_reader.hpp  file_entry.hpp  file_reader.hpp  file_reader_factory.hpp  utility.hpp
cli/include/handlers/: bed.hpp  gff.hpp  links.hpp  name_map.hpp  queryable.hpp  vcf.hpp
cli/include/subcalls/: index.hpp  intersect.hpp  subcall.hpp
cli/src/: bed_reader.cpp  filetype_detector.cpp  index.cpp  intersect.cpp  main.cpp  utility.cpp
cli/src/handlers/: bed.cpp  gff.cpp  links.cpp
cmake/: genogrove-config.cmake.in  genogrove_config.cmake.in
dev/bench/: data.js
docs/: Doxyfile  conf.py  index.rst  reference.rst  requirements.txt
include/genogrove/config/: version.hpp.in
include/genogrove/data_type/: all.hpp  any_type.hpp  constants.hpp  data_registry.hpp  flanking_query_result.hpp  genomic_coordinate.hpp  index.hpp  index_registry.hpp  interval.hpp  key.hpp  key_type_base.hpp  kmer.hpp  nearest_query_result.hpp  numeric.hpp  query_result.hpp  registry.hpp  serialization_traits.hpp  type_registry.hpp
include/genogrove/io/: bam_reader.hpp  bed_reader.hpp  bgzf_utils.hpp  fasta_index.hpp  fasta_reader.hpp  file_reader.hpp  file_reader_factory.hpp  filetype_detector.hpp  gff_reader.hpp  gg_format.hpp  indexed_fasta.hpp  kstring_guard.hpp  sequence_reader.hpp  vcf_reader.hpp
include/genogrove/structure/: all.hpp
include/genogrove/structure/grove/: gg_block_format.hpp  graph_overlay.hpp  grove.hpp  grove_flanking.ipp  grove_graph.ipp  grove_insert.ipp  grove_nearest.ipp  grove_query.ipp  grove_remove.ipp  grove_serialize.ipp  grove_view.hpp  lazy_grove.hpp  node.hpp  pod_io.hpp  (+2 more)
include/genogrove/utility/: char_utils.hpp  ranges.hpp  tokenizer.hpp
src/: genomic_coordinate.cpp  index.cpp  index_registry.cpp  interval.cpp  type_registry.cpp
src/data_type/: genomic_coordinate.cpp  interval.cpp  kmer.cpp  numeric.cpp
src/io/: bam_reader.cpp  bed_reader.cpp  bgzf_utils.cpp  fasta_index.cpp  fasta_reader.cpp  filetype_detector.cpp  gff_reader.cpp  gg_format.cpp  indexed_fasta.cpp  sequence_reader.cpp  vcf_reader.cpp
tests/: CMakeLists.txt  README.md
tests/cli/: index-e2e-test.cpp  intersect-e2e-test.cpp  intersect-test.cpp  links-test.cpp
tests/cli/data/: links.tsv  query.bed  query.gff  query.vcf  target.bed  target.gff  target_links.bed
tests/config/: version_test.cpp
tests/data_type/: data_registry_test.cpp  genomic_coordinate-test.cpp  genomic_coordinate_test.cpp  index-test.cpp  interval-key-test.cpp  interval-test.cpp  interval_test.cpp  key-new-test.cpp  key_test.cpp  kmer_test.cpp  numeric_test.cpp  query_result-test.cpp  query_result_test.cpp  registry_test.cpp  serialization_traits_test.cpp  type_registry-test.cpp
tests/data_type/key_type_tests/: genomic_coordinate_key_test.cpp  interval_key_test.cpp  key_comparison_typed_test.hpp  key_equality_typed_test.hpp  numeric_key_test.cpp
tests/io/: bamfile-test.cpp  bedfile-test.cpp  filetype-detector-test.cpp  gfffile-test.cpp  gg_format_test.cpp  indexedfasta-test.cpp  sequencefile-test.cpp  vcffile-test.cpp
tests/io/data/: temp_invalid.bed  test.bam  test.fa  test.fq  test.gtf  test.sam  test.vcf  test_bed12.bed  test_bed3.bed  test_bed6.bed  test_boundary_coords.gff  test_compression.bed  test_compression.bed.bz2  test_compression.bed.lz4  test_compression.bed.xz  test_compression.bed.zst  test_edge.vcf  test_empty_seq.fa  test_gff3.gff  test_haploid.vcf  test_indexed.fa  test_invalid.bed  test_invalid.gff  test_invalid_block_bounds.bed  test_invalid_blocks.bed  test_invalid_phase.gff  test_invalid_record.sam  test_invalid_score.gff  test_invalid_strand.gff  test_missing_gene_id.gtf  test_missing_transcript_id.gtf  test_mixed_bed.bed  test_quoted_semicolon.gtf  test_region.bcf  test_region.bcf.csi  test_region.bed  test_region.bed.gz.tbi  test_region.gff  test_region.gff.gz.tbi  test_region.vcf  (+2 more)
tests/structure/: bulk_distribution_test.cpp  data_type_grove_test.hpp  dataless_grove_test.cpp  genomic_coordinate-grove-test.cpp  genomic_coordinate_grove_test.cpp  graph-overlay-test.cpp  graph_overlay_test.cpp  grove_flanking_test.cpp  grove_nearest_test.cpp  grove_remove_test.cpp  grove_view_test.cpp  heterogeneous-grove-test.cpp  heterogeneous_grove_test.cpp  interval-grove-test.cpp  interval_grove_test.cpp  key_type_grove_test.hpp  kmer_grove_test.cpp  lazy_grove_test.cpp  numeric_grove_test.cpp  precondition_test.cpp  serialization_test.cpp  sorted-insertion-test.cpp  thread_safety_test.cpp  tree_validator.hpp
tests/utility/: ranges-test.cpp  tokenizer-test.cpp
